# GLED

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Scenes/TestScene/: monkey.fbx
src/: glad.c  main.cpp
src/Modules/: BasicInputManager.cpp  BasicInputManager.h  BasicObjectLoader.h  FBXLoader.h  FileLoader.h  ObjectLoader.h
src/Modules/ObjectLoaders/: FBXLoader.h
src/OpenGL_Utils/: Object.h  ObjectManager.h  OpenGL_Main.cpp  OpenGL_Main.h
src/OpenGL_Utils/Geometry/: Geometry.cpp  Geometry.h  Mesh.h  Texture.h  Triangle.h  Vertex.h
src/OpenGL_Utils/Geometry/Utility/: vectors.h
src/UtilityScripts/: UtilityScripts.cpp
